adding basic speech support
Built in response to https://developer.ibm.com/answers/questions/254586/service-interconnected-speech-to-text-dialog-text.html?utm_campaign=answers&utm_medium=email&utm_source=answers-new-question&utm_content=answers-answer-question

--- a/public/index.html
+++ b/public/index.html
@@ -55,10 +55,10 @@
 					<a href="http://www.ibm.com/smarterplanet/us/en/ibmwatson/developercloud/dialog.html" class="base--a">Documentation</a>
 				</li>
 				<li class="base--li banner--service-link-item">
-					<a href="https://bluemix.net/deploy?repository=https://github.com/watson-developer-cloud/dialog-nodejs.git" class="base--a">Fork and Deploy on Bluemix</a>
+					<a href="https://bluemix.net/deploy?repository=https://github.com/nfriedly/speech-dialog.git" class="base--a">Fork and Deploy on Bluemix</a>
 				</li>
 				<li class="base--li banner--service-link-item">
-					<a href="https://github.com/watson-developer-cloud/dialog-nodejs" class="base--a">Fork on Github</a>
+					<a href="https://github.com/nfriedly/speech-dialog" class="base--a">Fork on Github</a>
 				</li>
 			</div>
 		</div>
@@ -119,6 +119,7 @@
 				</div>
 
 				<input type="text" placeholder="Type a response and hit enter" value="" autocomplete="off" class="chat-window--message-input base--text-input">
+				<img class="chat-window--microphone-button" src="/images/icons/microphone.svg" alt="Record via Microphone"/>
 			</div>
 		</div>
 
@@ -159,6 +160,7 @@
 
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+  	<script type="text/javascript" src="js/watson-speech.min.js"></script>
   	<script type="text/javascript" src="js/demo.js"></script>
 </body>
 </html>
