Updated files and added the customer service dialog template

--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Dialog</title>
+<title>Customer Service Dialog with Speech to Text and Text to Speech</title>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -30,16 +30,16 @@
 			</a>
 		</nav>
 	</div>
-</header>
+	</header>
 
 	<div class="_demo--banner">
 	<div class="_demo--container">
 		<div class="banner--service-icon-container">
-			<img class="banner--service-icon" src="images/icons/dialog.svg" alt="Concept Insight Service Demo Icon">
+			<img class="banner--service-icon" src="images/icons/dialog.svg" alt="Dialog Services Demo Icon">
 		</div>
 		<div class="banner--service-info">
 			<h1 class="banner--service-title base--h1">
-				<img class="banner--service-icon_INLINE" src="images/icons/dialog.svg" alt="Concept Insight Service Demo Icon">
+				<img class="banner--service-icon_INLINE" src="images/icons/dialog.svg" alt="Dialog Services Demo Icon">
 				Dialog
 			</h1>
 			<div class="banner--service-description">The Dialog service provides a comprehensive, technology platform for managing conversations between virtual agents and users through an Application Programming Interface (API).</div>
@@ -55,10 +55,10 @@
 					<a href="http://www.ibm.com/smarterplanet/us/en/ibmwatson/developercloud/dialog.html" class="base--a">Documentation</a>
 				</li>
 				<li class="base--li banner--service-link-item">
-					<a href="https://bluemix.net/deploy?repository=https://github.com/nfriedly/speech-dialog.git" class="base--a">Fork and Deploy on Bluemix</a>
+					<a href="https://bluemix.net/deploy?repository=https://github.com/gauthamacharya/speech-dialog.git" class="base--a">Fork and Deploy on Bluemix</a>
 				</li>
 				<li class="base--li banner--service-link-item">
-					<a href="https://github.com/nfriedly/speech-dialog" class="base--a">Fork on Github</a>
+					<a href="https://github.com/gauthamacharya/speech-dialog" class="base--a">Fork on Github</a>
 				</li>
 			</div>
 		</div>
@@ -67,20 +67,7 @@
 	<div class="_demo--container">
 	<article class="_demo--content base--article">
 		<h2 class="base--h2">
-			Choose a Dialog Template
-		</h2>
-		<p>A template that contains prepared structures to create natural dialogs for your app.</p>
-		<div class="radio-group">
-			<input type="radio" name="dialog-template" id="hello-radio" value="hello" class="base--radio" checked>
-			<label for="hello-radio" class="base--label radio-group--label">Order A Pizza Template</label>
-			<!-- <input type="radio" name="dialog-template" id="yellow-radio" value="yellow" class="base--radio" disabled>
-			<label for="yellow-radio" class="base--label radio-group--label">Tech Support Template</label>
-			<input type="radio" name="dialog-template" id="green-radio" value="green" class="base--radio" disabled>
-			<label for="green-radio" class="base--label radio-group--label">Movie Template</label> -->
-		</div>
-		<div class="separate-line"></div>
-		<h2 class="base--h2">
-			Try the service
+			Try the Customer Service Demo
 		</h2>
 		<div class="_content--dialog">
 			<div class="chat-window">
@@ -89,7 +76,7 @@
 						<div class="chat-box--item_WATSON chat-box--item chat-box--item_HIDDEN">
 							<div class="chat-box--container">
 								<div class="img-container chat-box--avatar chat-box--avatar_WATSON">
-									<img src="images/icons/avatar-watson.svg" class="chat-box--avatar-img">
+									<img src="images/watson.gif" class="chat-box--avatar-img">
 								</div>
 								<div class="chat-box--message">
 									<div class="chat-box--message-vertical">
